# nhmr

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.py
.github/workflows/: run-tests.yaml
nhmr/: __init__.py  mapreduce.py
tests/: test_all.py
