[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nhmr"
authors = [
  { name="Vitaly R" },
]
description = "Simple library for performing MapReduce without external backends."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = [
    "version"
]
dependencies = [
  "psutil", "tqdm"
]

[tool.setuptools.dynamic]
version = {attr = "nhmr.__version__"}
readme = {file = ["README.md"]}

[project.urls]
"Homepage" = "https://github.com/VitalyRomanov/nhrm"
"Bug Tracker" = "https://github.com/VitalyRomanov/nhmr/issues"